refactor: fix memory impacting issues